--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Node modules
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Environment variables
+backend/.env
+backend/.env.prod
+frontend/.env
+frontend/.env.prod
+
+# Build outputs
+dist/
+build/
+
+
+# Docker
+docker-compose.prod.yml
+
 # Logs
 logs
 *.log
