--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start:dev": "nest start --watch",
     "start:prod": "node dist/main.js",
     "build": "nest build",
-    "prestart:prod": "npm run build"
+    "prestart:prod": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
